--- a/main.html
+++ b/main.html
@@ -8,9 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <script src="./script.js">
 </script>
+<img src="https://media.istockphoto.com/id/2026155202/photo/a-tricolor-mixed-breed-dog-listening-intently-with-a-foggy-background.jpg?s=1024x1024&w=is&k=20&c=5v26XOjDvSzErA502USoHgsMXCN5pPhBTkzQ9L3MTek=" alt="Your Img" width="500">
+	<h1>Riya</h1>
+	<p><a href="https://www.linkedin.com/in/yourprofile">Linkedin Profile</a></p>
+	<section id = "skills">
+		<h2>Skills</h2>
+		<p>Proficient in programming</p>
+	</secion>
 
+	<section id ="projects">
+		<h2>Projects</h2>
+		<ul>
+			<li>Gesture</li>
+			<li>Gesture</li>
+		</ul>
+	</section>
+		
+		
 </body>
 
 </html>
